# voynich

./: .gitignore  CITATION.cff  LICENSE  METHODOLOGY.md  README.md  cli.py  convergence_attack.py  convergence_attack_p10.py  convergence_attack_p11.py  convergence_attack_p12.py  convergence_attack_p2.py  convergence_attack_p3.py  convergence_attack_p4.py  convergence_attack_p5.py  convergence_attack_p6.py  convergence_attack_p7.py  convergence_attack_p8.py  convergence_attack_p9.py  pyproject.toml  run_max.py
2nd_run_results/: combined_report.json  convergence_report.json
data/: Voynich_Botanicals.csv  botanical_identifications.py  botanical_name_mapping.py  english_glossary.json  expanded_medical_vocabulary.py  folio_illustration_priors.py  glyph_alphabets.py  ivtff_parser.py  latin_syllables.py  medieval_text_templates.py  section_vocabularies.py  semantic_fields.py  voynich_corpus.py
modules/: candidate_search.py  constraint_model.py  entropy_gradient.py  error_model.py  fsa_extraction.py  label_analysis.py  naibbe_cipher.py  nmf_analysis.py  null_framework.py  paragraph_analysis.py  positional_shape.py  qo_analysis.py  statistical_analysis.py  strategy1_parameter_search.py  strategy2_scribe_seams.py  strategy3_binding_reconstruction.py  strategy4_positional_grammar.py  strategy5_zodiac_attack.py  word_length.py
orchestrators/: __init__.py  _config.py  _foundation.py  _utils.py  phase10.py  phase11.py  phase12.py  phase12_5.py  phase13.py  phase14.py  phase2.py  phase3.py  phase4.py  phase5.py  phase6.py  phase7.py  phase8.py  phase9.py  robustness.py
(+309 files in other folders)
