[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voynich"
version = "0.1.0"
description = "Voynich Manuscript Convergence Attack — 14-phase decipherment pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "python-Levenshtein>=0.26.1",
    "beautifulsoup4>=4.14.3",
]

[project.scripts]
voynich = "voynich.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voynich"]
